<resources>
    <string name="app_name">MyDigimind</string>
    <string name="title_home">My Board</string>
    <string name="title_add">New Reminder</string>
    <string name="reminder_name">What do you want to remember?</string>
    <string name="when">When do you want to do it?</string>
    <string name="time">At what time?</string>
    <string name="done">Done</string>
    <string name="su">Sunday</string>
    <string name="mo">Monday</string>
    <string name="tu">Tuesday</string>
    <string name="we">Wednesday</string>
    <string name="th">Thursday</string>
    <string name="fr">Friday</string>
    <string name="sa">Saturday</string>

</resources>